[package]
name = "node-bench"
version = "0.9.0-dev"
authors.workspace = true
description = "Substrate node integration benchmarks."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = "6.1"
clap = { version = "4.5.3", features = ["derive"] }
log = { workspace = true, default-features = true }
node-primitives = { path = "../primitives" }
node-testing = { path = "../testing" }
firechain-mainnet-runtime = { path = "../../runtime/firechain-mainnet-runtime" }
sc-client-api =  { workspace = true }
sp-runtime =  { workspace = true }
sp-state-machine = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
kvdb = "0.13.0"
kvdb-rocksdb = "0.19.0"
sp-trie = { workspace = true }
sp-core =  { workspace = true }
sp-consensus =  { workspace = true }
sc-basic-authorship = { workspace = true }
sp-inherents = { workspace = true }
sp-timestamp = {  workspace = true , default-features = false }
sp-tracing = { workspace = true }
hash-db = "0.16.0"
tempfile = "3.1.0"
fs_extra = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-db = "0.4.12"
sc-transaction-pool =  { workspace = true }
sc-transaction-pool-api = { workspace = true }
futures = { version = "0.3.30", features = ["thread-pool"] }
