[package]
name = "staging-node-inspect"
version = "0.12.0"
authors.workspace = true
description = "Substrate node block inspection tool."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1" }
thiserror = { version = "1.0.48" }
sc-cli ={ workspace = true }
sc-client-api = { workspace = true }
sc-service = {workspace = true , default-features = false }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime ={ workspace = true }
sp-statement-store = { workspace = true }

[features]
runtime-benchmarks = [
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
