[package]
name = "node-testing"
version = "3.0.0-dev"
authors.workspace = true
description = "Test utilities for Substrate node."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
fs_extra = "1"
futures = "0.3.30"
log = { workspace = true, default-features = true }
tempfile = "3.1.0"
frame-metadata-hash-extension =  { workspace = true }
frame-system =  { workspace = true }
node-cli = { package = "staging-node-cli", path = "../cli" }
node-primitives = { path = "../primitives" }
firechain-mainnet-runtime = { path = "../../runtime/firechain-mainnet-runtime" }
pallet-asset-conversion = { workspace = true }
pallet-assets =  { workspace = true }
pallet-asset-conversion-tx-payment =  { workspace = true }
pallet-asset-tx-payment =  { workspace = true }
pallet-skip-feeless-payment = { workspace = true }
sc-block-builder = {  workspace = true  }
sc-client-api =  { workspace = true }
sc-client-db = { workspace = true, features = ["rocksdb"] }
sc-consensus =  { workspace = true }
sc-executor =  { workspace = true }
sc-service = { workspace = true , features = ["rocksdb", "test-helpers"] }
sp-api =  { workspace = true }
sp-block-builder =  { workspace = true }
sp-blockchain =  { workspace = true }
sp-consensus =  { workspace = true }
sp-core =  { workspace = true }
sp-crypto-hashing =  { workspace = true }
sp-inherents =  { workspace = true }
sp-io =  { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true , default-features = false }
substrate-test-client =  { workspace = true }
